tests/output_terminal/test_errors_with_multiline_comments_output.txt
    char x;
         ^ Already exists
Error on line 6 (column 10): Variable already exists on this scope.

Process finished with exit code 0
